--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -29,7 +29,7 @@
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:text="@string/misc_days"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:id="@+id/navDays"
+                android:id="@id/navDays"
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"/>
     </LinearLayout>
@@ -40,12 +40,12 @@
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="@string/navigation_drawer_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/navTitle"/>
+            android:id="@id/navTitle"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/navigation_drawer_subtitle"
-            android:id="@+id/navSubtitle"/>
+            android:id="@id/navSubTitle"/>
 
 </LinearLayout>
