start work on event feedback
Implements most of the UI. Also includes a version bump for the nav component

todo:
- make the submit button actually submit
- add rating component
- fix connection from Event Item

ref: #289

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,6 +46,9 @@
         <argument
             android:name="eventId"
             app:argType="string" /><deepLink app:uri="eurofurence://events/{eventId}/"/>
+        <action
+            android:id="@+id/action_fragmentViewEvent_to_eventFeedbackFragment"
+            app:destination="@id/eventFeedbackFragment" />
     </fragment>
     <fragment
         android:id="@+id/dealerListFragment"
@@ -126,5 +129,16 @@
         <argument
             android:name="announcementId"
             app:argType="string" /><deepLink app:uri="eurofurence://announcements/{announcementId}/"/>
+    </fragment>
+    <fragment
+        android:id="@+id/eventFeedbackFragment"
+        android:name="org.eurofurence.connavigator.ui.fragments.EventFeedbackFragment"
+        android:label="EventFeedbackFragment" >
+        <argument
+            android:name="eventId"
+            app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="eurofurence://events/{eventId}/feedback/" />
     </fragment>
 </navigation>
