Why did that one not upload

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="textWhite">#dcdcdc</color>
     <color name="textBlack">#010101</color>
     <color name="backgroundGrey">#DDD</color>
+    <color name="mutedText">#888</color>
     <color name="alert">#FFE082</color>
 </resources>
