--- a/app/src/main/res/menu/dealer_list_menu.xml
+++ b/app/src/main/res/menu/dealer_list_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_search"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/icon_search_white"
         android:title="Search"
-        android:icon="@drawable/icon_search_white"/>
+        app:showAsAction="ifRoom" />
 </menu>
