move settings to fragment instead of a personal activity

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -154,9 +154,9 @@
         android:id="@+id/navAbout"
         android:name="org.eurofurence.connavigator.ui.fragments.FragmentViewAbout"
         android:label="@string/about" />
-    <activity
+    <fragment
         android:id="@+id/navSettings"
-        android:name="org.eurofurence.connavigator.ui.activities.SettingsActivity"
+        android:name="org.eurofurence.connavigator.ui.fragments.SettingsFragment"
         android:label="@string/settings" />
     <activity
         android:id="@+id/navLogin"
