add loading indicator fragment

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -43,4 +43,5 @@
     <item name="navDays" type="id" />
     <item name="navTitle" type="id" />
     <item name="navSubTitle" type="id" />
+    <item name="loadingWidget" type="id" />
 </resources>
